--- a/custom_sale_project/views/sale_order_view.xml
+++ b/custom_sale_project/views/sale_order_view.xml
@@ -4,6 +4,16 @@
         <field name="model">sale.order</field>
         <field name="inherit_id" ref="sale.view_order_form"/>
         <field name="arch" type="xml">
+
+            <xpath expr="//field[@name='order_line']//tree/field[@name='product_template_id']" position="after">
+                <field name="task_count" string="Tasks"/>
+                <button name="action_view_tasks" type="object"
+                        class="btn-link"
+                        attrs="{'invisible': [('task_count', '=', 0)]}"
+                        icon="fa-tasks">
+                    <field name="task_count" column_invisible="1"/>
+                </button>
+            </xpath>
             <xpath expr="//div[@name='button_box']" position="inside">
                 <button name="action_view_project"
                         type="object"
@@ -28,7 +38,6 @@
             <xpath expr="//field[@name='order_line']/tree" position="inside">
                 <field name="discount_amount" column_invisible="True"/>
                 <field name="discount_value"/>
-                <field name="task_id" column_invisible="1"/>
             </xpath>
 
 
