--- a/custom_quot_report_ftmc/report/template.xml
+++ b/custom_quot_report_ftmc/report/template.xml
@@ -104,97 +104,84 @@
                         }
                     </style>
 
-                    <!-- HEADER SECTION -->
-                    <div class="quotation-title">QUOTATION</div>
-
-                    <!-- CLIENT INFORMATION -->
-                    <div>
-                        <strong>Quoted to:</strong>
-                    </div>
-                    <div>
-                        <strong>
-                            <t t-esc="doc.partner_id.name"/>
-                        </strong>
-                    </div>
-
-                    <!-- QUOTATION DETAILS -->
-                    <table class="table-details">
+                    <!-- QUOTATION HEADER SECTION -->
+                    <table style="width: 100%;">
                         <tr>
-                            <td width="50%">
-                                <table>
+                            <!-- Left side: Client Information -->
+
+                            <div>
+                                <strong>Quoted to:</strong>
+                            </div>
+                            <div>
+                                <strong>
+                                    <t t-esc="doc.partner_id.name"/>
+                                </strong>
+                            </div>
+                            <div>
+                                <strong>Quotation No.:</strong>
+                                <t t-esc="doc.name"/>
+                            </div>
+                            <div>
+                                <strong>Date:</strong>
+                                <t t-esc="doc.date_order"/>
+                            </div>
+
+                            <!-- Right side: Quotation Details Table -->
+                            <td width="50%" style="vertical-align: top;">
+                                <table style="width: 100%; border: 1px solid black; border-collapse: collapse;">
                                     <tr>
-                                        <td>
-                                            <strong>Quotation No.</strong>
-                                        </td>
-                                        <td>
-                                            <t t-esc="doc.name"/>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>
-                                            <strong>Date</strong>
-                                        </td>
-                                        <td>
-                                            <t t-esc="doc.date_order"/>
-                                        </td>
-                                    </tr>
-                                </table>
-                            </td>
-                            <td width="50%">
-                                <table>
-                                    <tr>
-                                        <td>
+                                        <td style="border: 1px solid black;">
                                             <strong>Tel:</strong>
                                         </td>
-                                        <td>
+                                        <td style="border: 1px solid black;">
                                             <t t-esc="doc.partner_id.phone"/>
                                         </td>
-                                        <td>
+                                        <td style="border: 1px solid black;">
                                             <strong>Inquiry No.</strong>
                                         </td>
-                                        <td>
+                                        <td style="border: 1px solid black;">
                                             <t t-esc="doc.origin"/>
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td>
+                                        <td style="border: 1px solid black;">
                                             <strong>Mob:</strong>
                                         </td>
-                                        <td>
+                                        <td style="border: 1px solid black;">
                                             <t t-esc="doc.partner_id.mobile"/>
                                         </td>
-                                        <td>
-                                            <strong>Inquiry Date</strong>
+                                        <td style="border: 1px solid black;">
+                                            <strong>Inquiry Date:</strong>
                                         </td>
-                                        <td>
+                                        <td style="border: 1px solid black;">
                                             <t t-esc="doc.inquiry_date" t-options="{'widget': 'date'}"/>
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td>
+                                        <td style="border: 1px solid black;">
                                             <strong>Fax:</strong>
                                         </td>
-                                        <td>
+                                        <td style="border: 1px solid black;">
                                             <t t-esc="doc.partner_id.phone"/>
                                         </td>
-                                        <td>
+                                        <td style="border: 1px solid black;">
                                             <strong>Prepared by:</strong>
                                         </td>
-                                        <td>
+                                        <td style="border: 1px solid black;">
                                             <t t-esc="doc.prepared_by.name"/>
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td>
+                                        <td style="border: 1px solid black;">
                                             <strong>E-mail:</strong>
                                         </td>
-                                        <td>
+                                        <td style="border: 1px solid black;">
                                             <t t-esc="doc.partner_id.email"/>
                                         </td>
-                                        <td>
-                                            <strong>Inquiry No.</strong>
+                                        <td style="border: 1px solid black;">
+                                            <strong>Inquiry No.:</strong>
                                         </td>
-                                        <td>
+                                        <td style="border: 1px solid black;">
                                             <t t-esc="doc.origin"/>
                                         </td>
                                     </tr>
@@ -203,13 +190,14 @@
                         </tr>
                     </table>
 
+
                     <!-- PROJECT INFORMATION -->
                     <div>
                         <strong>Attention:</strong>
                     </div>
                     <div>
                         <strong>
-<!--                            <t t-if="doc.contact" t-esc="doc.contact.name"/>-->
+                            <!--                            <t t-if="doc.contact" t-esc="doc.contact.name"/>-->
                         </strong>
                     </div>
 
@@ -351,7 +339,7 @@
                     <div class="page-break"></div>
 
                     <!-- DETAILED PRODUCT TABLES BY CATEGORY -->
-                    <t t-set="categories" t-value="doc.get_product_categories()"/>
+                    <t t-set="categories" t-value="doc.get_product_orderlines()"/>
                     <t t-foreach="categories.items()" t-as="category">
                         <table class="item-table section-margin">
                             <tr class="panel-header">
@@ -368,40 +356,40 @@
                             </tr>
                             <t t-set="counter" t-value="1"/>
                             <t t-set="category_total" t-value="0"/>
-                            <t t-foreach="category[1]" t-as="line">
-                                <tr>
-                                    <td class="number">
-                                        <t t-esc="counter"/>
-                                    </td>
-                                    <td>
-                                        <t t-esc="line.product_id.name"/>
-                                        <t t-if="line.product_id.description_sale">
-                                            <span class="product-description">
-                                                <t t-esc="line.product_id.description_sale"/>
-                                            </span>
-                                        </t>
-                                    </td>
-                                    <td class="number">
-                                        <t t-esc="line.product_uom_qty"/>
-                                    </td>
-                                    <td class="number">
-                                        <t t-esc="line.price_unit"
-                                           t-options='{"widget": "monetary", "display_currency": doc.currency_id}'/>
-                                    </td>
-                                    <td class="number">
-                                        <t t-esc="line.price_subtotal"
-                                           t-options='{"widget": "monetary", "display_currency": doc.currency_id}'/>
-                                    </td>
-                                </tr>
-                                <t t-set="counter" t-value="counter + 1"/>
-                                <t t-set="category_total" t-value="category_total + line.price_subtotal"/>
+                            ---------------
+                            <t t-set="entries" t-value="category[1]"/>
+                            <t t-foreach="entries" t-as="entry">
+                                <t t-foreach="entry['tasks']" t-as="task">
+                                    <tr>
+                                        <td class="number">
+                                            <t t-esc="counter"/>
+                                        </td>
+                                        <td>
+                                            <t t-esc="task['name']"/>
+                                        </td>
+                                        <td class="number">
+                                            <t t-esc="task['quantity']"/>
+                                        </td>
+                                        <td class="number">
+                                            <t t-esc="task['unit_price']"
+                                               t-options='{"widget": "monetary", "display_currency": doc.currency_id}'/>
+                                        </td>
+                                        <td class="number">
+                                            <t t-esc="task['total_price']"
+                                               t-options='{"widget": "monetary", "display_currency": doc.currency_id}'/>
+                                        </td>
+                                    </tr>
+                                    <t t-set="counter" t-value="counter + 1"/>
+                                    <t t-set="category_total" t-value="category_total + task['total_price']"/>
+                                </t>
                             </t>
+
                             <tr>
                                 <td colspan="2">
                                     <strong>TOTAL</strong>
                                 </td>
                                 <td class="number">
-                                    <t t-esc="len(category[1])"/>
+                                    <t t-esc="task['total']"/>
                                 </td>
                                 <td></td>
                                 <td class="number">
@@ -566,68 +554,80 @@
                     <!-- HEADER SECTION -->
                     <div class="quotation-title">TECHNICAL OFFER</div>
 
-                    <!-- CLIENT INFORMATION -->
-                    <div class="client-info">
-                        <strong>Quoted to:</strong>
-                        <br/>
-                        <strong>
-                            <t t-esc="doc.partner_id.name"/>
-                        </strong>
-                        <br/>
-                        <t t-if="doc.partner_id.country_id">
-                            <t t-esc="doc.partner_id.country_id.name"/>
-                        </t>
-                    </div>
+                    <!-- QUOTATION HEADER SECTION WITH CLIENT INFO AND QUOTATION DETAILS SIDE BY SIDE -->
+                    <table style="width: 100%;">
+                        <tr>
+                            <!-- Left Side: Client Info -->
+                            <td width="50%" style="vertical-align: top;">
+                                <div class="client-info">
+                                    <strong>Quotation No.:</strong>
+                                    <br/>
+                                    <strong>
+                                        <t t-esc="doc.name"/>
+                                    </strong>
+                                    <br/>
+                                    <br/>
 
-                    <!-- QUOTATION DETAILS -->
-                    <table class="info-table">
-                        <tr>
-                            <td width="50%">
-                                <strong>Quotation No.</strong>
+                                    <strong>Quoted to:</strong>
+                                    <br/>
+                                    <strong>
+                                        <t t-esc="doc.partner_id.name"/>
+                                    </strong>
+                                    <br/>
+                                    <t t-if="doc.partner_id.country_id">
+                                        <t t-esc="doc.partner_id.country_id.name"/>
+                                    </t>
+                                    <br/>
+                                    <br/>
+
+                                    <strong>Date:</strong>
+                                    <br/>
+                                    <strong>
+                                        <t t-esc="doc.date_order"/>
+                                    </strong>
+                                </div>
                             </td>
-                            <td width="50%">
-                                <t t-esc="doc.name"/>
+
+                            <!-- Right Side: Quotation Details Table (Bordered) -->
+                            <td width="50%" style="vertical-align: top;">
+                                <table class="info-table"
+                                       style="width: 100%; border: 1px solid black; border-collapse: collapse;">
+                                    <tr>
+                                        <td style="border: 1px solid black;">
+                                            <strong>Inquiry No.</strong>
+                                        </td>
+                                        <td style="border: 1px solid black;">
+                                            <t t-esc="doc.origin"/>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td style="border: 1px solid black;">
+                                            <strong>Inquiry Date</strong>
+                                        </td>
+                                        <td style="border: 1px solid black;">
+                                            <t t-esc="doc.inquiry_date"
+                                               t-options="{'widget': 'date', 'format': 'dd-MMM-yy'}"/>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td style="border: 1px solid black;">
+                                            <strong>Prepared by:</strong>
+                                        </td>
+                                        <td style="border: 1px solid black;">
+                                            <t t-esc="doc.prepared_by.name"/>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td style="border: 1px solid black;">
+                                            <strong>Reference</strong>
+                                        </td>
+                                        <td style="border: 1px solid black;"></td>
+                                    </tr>
+                                </table>
                             </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <strong>Date:</strong>
-                            </td>
-                            <td>
-                                <t t-esc="doc.date_order" t-options="{'widget': 'date', 'format': 'dd-MMM-yy'}"/>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <strong>Inquiry No.</strong>
-                            </td>
-                            <td>
-                                <t t-esc="doc.origin"/>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <strong>Inquiry Date</strong>
-                            </td>
-                            <td>
-                                <t t-esc="doc.inquiry_date" t-options="{'widget': 'date', 'format': 'dd-MMM-yy'}"/>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <strong>Prepared by:</strong>
-                            </td>
-                            <td>
-                                <t t-esc="doc.prepared_by.name"/>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <strong>Reference</strong>
-                            </td>
-                            <td></td>
                         </tr>
                     </table>
+
 
                     <!-- PROJECT INFORMATION -->
                     <div class="section-title">Project Name:</div>
@@ -637,7 +637,7 @@
 
                     <div class="section-title">Attention:</div>
                     <div>
-<!--                        <t t-if="doc.contact" t-esc="doc.contact.name"/>-->
+                        <!--                        <t t-if="doc.contact" t-esc="doc.contact.name"/>-->
                     </div>
 
                     <!-- SALUTATION -->
