--- a/custom_quot_report_ftmc/report/template.xml
+++ b/custom_quot_report_ftmc/report/template.xml
@@ -384,7 +384,7 @@
                                         </td>
                                     </tr>
                                     <t t-set="counter" t-value="counter + 1"/>
-                                    <t t-set="category_total" t-value="category_total + task['total_price']"/>
+                                    <t t-set="category_total" t-value="category_total + task['total_price_with_discount']"/>
                                 </t>
                             </t>
 
